--- a/ALEXIS_conda_environment.yml
+++ b/ALEXIS_conda_environment.yml
@@ -24,6 +24,11 @@ dependencies:
   - wheel=0.35.1=pyh9f0ad1d_0
   - xz=5.2.5=h516909a_1
   - zlib=1.2.11=h516909a_1009
+  - ffmpeg=4.2.7
+  - libavcodec
+  - libavformat
+  - libavutil
+  - libswscale
   - pip:
     - aiapy==0.4.0
     - aioftp==0.18.0
