--- a/ALEXIS_conda_environment.yml
+++ b/ALEXIS_conda_environment.yml
@@ -3,27 +3,27 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
+  - _libgcc_mutex=0.1=conda_forge # not on mac
+  - _openmp_mutex=4.5=1_gnu # not on mac
   - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py38h578d9bd_1
-  - ld_impl_linux-64=2.34=hc38a660_9
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.3.0=h24d8f2e_16
-  - libgomp=9.3.0=h24d8f2e_16
-  - libstdcxx-ng=9.3.0=hdf63c60_16
-  - ncurses=6.2=he1b5a44_1
-  - openssl=1.1.1i=h7f98852_0
+  - certifi=2020.12.5=py38h578d9bd_1 # not on mac
+  - ld_impl_linux-64=2.34=hc38a660_9 # not on mac
+  - libffi=3.2.1=he1b5a44_1007 # not on mac
+  - libgcc-ng=9.3.0=h24d8f2e_16 # not on mac
+  - libgomp=9.3.0=h24d8f2e_16 # not on mac
+  - libstdcxx-ng=9.3.0=hdf63c60_16 # not on mac
+  - ncurses=6.2=he1b5a44_1 # not on mac
+  - openssl=1.1.1i=h7f98852_0 # not on mac
   - pip=21.0=pyhd8ed1ab_1
-  - python=3.8.5=h1103e12_7_cpython
+  - python=3.8.5=h1103e12_7_cpython # not on mac
   - python_abi=3.8=1_cp38
-  - readline=8.0=he28a2e2_2
-  - setuptools=49.6.0=py38h32f6830_0
-  - sqlite=3.33.0=h4cf870e_0
-  - tk=8.6.10=hed695b0_0
+  - readline=8.0=he28a2e2_2 # not on mac
+  - setuptools=49.6.0=py38h32f6830_0 # not on mac
+  - sqlite=3.33.0=h4cf870e_0 # not on mac
+  - tk=8.6.10=hed695b0_0 # not on mac
   - wheel=0.35.1=pyh9f0ad1d_0
-  - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h516909a_1009 
+  - xz=5.2.5=h516909a_1 # not on mac
+  - zlib=1.2.11=h516909a_1009  # not on mac
   - pip:
     - aiapy==0.4.0
     - aioftp==0.18.0
@@ -165,4 +165,4 @@ dependencies:
     - zeep==4.0.0
     - zope-interface==5.2.0
     - parsl
-prefix: /data/padialjr/anaconda3/envs/aiadl_2
+
